--- a/README.org
+++ b/README.org
@@ -1,21 +1,30 @@
+* Requirements
+
+To use this repository you will need:
+
+1. Emacs 24.3+
+2. Emacs' impatient-mode (available through MELPA)
+3. JDK 7+
+4. Leiningen (http://leiningen.org)
+
 * Usage
 
-1. Run *M-x httpd-start* in Emacs to start up an HTTP server on port 8080.
+1. Run *lein cljsbuild auto* at your terminal to recompile
+   *resources/js/script.js* from *src/cljs/enfocus_demo/core.cljs*.
 
-2. Next open *resources/index.html*, *resources/css/styles.css*, and
+2. Run *M-x httpd-start* in Emacs to start up an HTTP server on port 8080.
+
+3. Next open *resources/index.html*, *resources/css/styles.css*, and
    *resources/js/script.js* in Emacs and run *M-x impatient mode* in
    each buffer.
 
-3. Point your web browser at *http://localhost:8080/imp/* to see the
+4. Point your web browser at *http://localhost:8080/imp/* to see the
    live buffer list. Select *index.html*.
 
-4. Run *lein cljsbuild auto* at your terminal to recompile
-   *resources/js/script.js* from *src/cljs/enfocus_demo/core.cljs*.
-
-5. You may now edit *index.html* and *styles.css* freely and see the
-   immediate updates in your web browser. Every time you save
-   *core.cljs*, it will be recompiled to Javascript and the changes
-   will then appear in your browser.
+5. You may now edit *index.html* and *styles.css* freely in Emacs and
+   see the changes immediately in your web browser. Every time you
+   save *core.cljs*, it will be recompiled to Javascript and the
+   changes will then appear in your browser.
 
 Happy hacking!
   ~Gary
