--- a/README.org
+++ b/README.org
@@ -16,7 +16,8 @@ To use this repository you will need:
 
 3. Next open *resources/index.html*, *resources/css/styles.css*, and
    *resources/js/script.js* in Emacs and run *M-x impatient mode* in
-   each buffer.
+   each buffer. Also run *M-x auto-revert-mode* on
+   *resources/js/script.js*.
 
 4. Point your web browser at *http://localhost:8080/imp/* to see the
    live buffer list. Select *index.html*.
@@ -24,7 +25,7 @@ To use this repository you will need:
 5. You may now edit *index.html* and *styles.css* freely in Emacs and
    see the changes immediately in your web browser. Every time you
    save *core.cljs*, it will be recompiled to Javascript and the
-   changes will then appear in your browser.
+   changes will then appear in your browser after a few seconds.
 
 Happy hacking!
   ~Gary
